Add new API endpoint for pre_review info
